# tarea-3-t3_at

./: README.md  benchmark.cpp  biquad.cpp  biquad.h  cascade.cpp  cascade.h  dsp_client.cpp  dsp_client.h  jack_client.cpp  main.cpp  meson.build  prueba.cpp
TareaDSP3-octave/: butter_bandpass.mat  butter_highpass.mat  butter_lowpass.mat  butter_stoppass.mat  cheby1_bandpass.mat  cheby1_highpass.mat  cheby1_lowpass.mat  cheby1_stoppass.mat  cheby2_bandpass.mat  cheby2_highpass.mat  cheby2_lowpass.mat  cheby2_stoppass.mat  design_filters.m  ellip_bandpass.mat  ellip_highpass.mat  ellip_lowpass.mat  ellip_stoppass.mat  listen_filter.m  pruebaImpulso.m  sweeepGenerator.m  viewfreqresp.m
